gschem: update German translations

--- a/gschem/po/de.po
+++ b/gschem/po/de.po
@@ -723,10 +723,10 @@ msgstr "fehler"
 msgid "No component selected\n"
 msgstr "Punktraster ausgewählt\n"
 
+# Reverted document
 #: gschem/src/iface/i_command.c:3048 gschem/src/iface/i_window.c:333
-#, fuzzy
 msgid "Reverted document"
-msgstr "_Dokumentation..."
+msgstr "Zurückgesetztes Dokument"
 
 #: gschem/src/iface/i_command.c:3106
 msgid "Confirm revert ALL documents"
@@ -1292,10 +1292,10 @@ msgstr ""
 msgid "When checked the image size will be exported"
 msgstr ""
 
+# Failed to load picture; Image upload failed
 #: gschem/src/object/o_picture.c:617
-#, fuzzy
 msgid "Failed to load picture"
-msgstr "Die folgenden Bilder konnten nicht überschrieben werden: %s"
+msgstr "Bild konnte nicht geladen werden"
 
 #: gschem/src/object/o_picture.c:627
 msgid "An unknown error occurred"
