--- a/gschem/po/el.po
+++ b/gschem/po/el.po
@@ -747,10 +747,10 @@ msgstr "λάθος"
 msgid "No component selected\n"
 msgstr ""
 
+# Reverted document
 #: gschem/src/iface/i_command.c:3048 gschem/src/iface/i_window.c:333
-#, fuzzy
 msgid "Reverted document"
-msgstr "_Τεκμηρίωση"
+msgstr "Έγινε επαναφορά του εγγράφου"
 
 #: gschem/src/iface/i_command.c:3106
 msgid "Confirm revert ALL documents"
@@ -1308,10 +1308,10 @@ msgstr ""
 msgid "When checked the image size will be exported"
 msgstr ""
 
+# Failed to load picture; Image upload failed
 #: gschem/src/object/o_picture.c:617
-#, fuzzy
 msgid "Failed to load picture"
-msgstr "Αδυναμία αντικατάστασης εικόνων: %s"
+msgstr "Αποτυχία φόρτωσης εικόνας"
 
 #: gschem/src/object/o_picture.c:627
 msgid "An unknown error occurred"
