--- a/gschem/po/fi.po
+++ b/gschem/po/fi.po
@@ -807,10 +807,10 @@ msgstr "virhe"
 msgid "No component selected\n"
 msgstr "Ei komponenttia valittu\n"
 
+# Reverted document
 #: gschem/src/iface/i_command.c:3048 gschem/src/iface/i_window.c:333
-#, fuzzy
 msgid "Reverted document"
-msgstr "Vahvista kaikkien asiakirjojen palautus"
+msgstr "Palautettu asiakirja"
 
 #: gschem/src/iface/i_command.c:3106
 msgid "Confirm revert ALL documents"
@@ -1379,11 +1379,10 @@ msgstr ""
 msgid "When checked the image size will be exported"
 msgstr ""
 
-# Failed to load file
+# Failed to load picture
 #: gschem/src/object/o_picture.c:617
-#, fuzzy
 msgid "Failed to load picture"
-msgstr "Lataaminen epäonnistui tiedostoon"
+msgstr "Kuvan lataaminen epäonnistui"
 
 #: gschem/src/object/o_picture.c:627
 msgid "An unknown error occurred"
