gschem: update Hebrew translations

--- a/gschem/po/he.po
+++ b/gschem/po/he.po
@@ -761,11 +761,10 @@ msgstr "שְׁגִיאָה"
 msgid "No component selected\n"
 msgstr ""
 
-# Create PDF document
+# Reverted document
 #: gschem/src/iface/i_command.c:3048 gschem/src/iface/i_window.c:333
-#, fuzzy
 msgid "Reverted document"
-msgstr "יצירת מסמך PDF"
+msgstr "מסמך שהוחזר"
 
 #: gschem/src/iface/i_command.c:3106
 msgid "Confirm revert ALL documents"
@@ -1338,10 +1337,10 @@ msgstr ""
 msgid "When checked the image size will be exported"
 msgstr ""
 
+# Failed to load picture
 #: gschem/src/object/o_picture.c:617
-#, fuzzy
 msgid "Failed to load picture"
-msgstr "שמירת הכל נכשלה"
+msgstr "טעינת התמונה נכשלה"
 
 #: gschem/src/object/o_picture.c:627
 msgid "An unknown error occurred"
