--- a/gschem/po/ja.po
+++ b/gschem/po/ja.po
@@ -724,10 +724,10 @@ msgstr "エラー"
 msgid "No component selected\n"
 msgstr ""
 
+# Reverted document; Bunsho o gen ni modoshimashita
 #: gschem/src/iface/i_command.c:3048 gschem/src/iface/i_window.c:333
-#, fuzzy
 msgid "Reverted document"
-msgstr "部品モード"
+msgstr "文書を元に戻しました"
 
 #: gschem/src/iface/i_command.c:3106
 msgid "Confirm revert ALL documents"
@@ -1282,10 +1282,10 @@ msgstr ""
 msgid "When checked the image size will be exported"
 msgstr ""
 
+# Failed to load picture; Gazō no yomikomi ni shippai shimashita
 #: gschem/src/object/o_picture.c:617
-#, fuzzy
 msgid "Failed to load picture"
-msgstr "画像の置き換えに失敗しました"
+msgstr "画像の読み込みに失敗しました"
 
 #: gschem/src/object/o_picture.c:627
 msgid "An unknown error occurred"
