gschem: update Khmer translations

--- a/gschem/po/kh.po
+++ b/gschem/po/kh.po
@@ -737,11 +737,10 @@ msgstr "kamhos"
 msgid "No component selected\n"
 msgstr "sameasapheak del ban chreusa min mean\n"
 
-# Create PDF document
+# Reverted document
 #: gschem/src/iface/i_command.c:3048 gschem/src/iface/i_window.c:333
-#, fuzzy
 msgid "Reverted document"
-msgstr "bangkeut eksar PDF"
+msgstr "eksar tralb"
 
 #: gschem/src/iface/i_command.c:3106
 msgid "Confirm revert ALL documents"
@@ -1306,9 +1305,8 @@ msgid "When checked the image size will be exported"
 msgstr "pel thik tomham roubpheap nung trauv ban neachenh"
 
 #: gschem/src/object/o_picture.c:617
-#, fuzzy
 msgid "Failed to load picture"
-msgstr "<b>breachy knong kar phtok eksar roubpheap</b>"
+msgstr "breachy knong kar phtok eksar roubpheap"
 
 #: gschem/src/object/o_picture.c:627
 msgid "An unknown error occurred"
