--- a/gschem/po/bs.po
+++ b/gschem/po/bs.po
@@ -951,15 +951,16 @@ msgstr "Sada je automatski prikaz"
 #: gschem/src/iface/i_command.c:5064
 #, c-format
 msgid "(read only) width=%d, height=%d\n"
-msgstr ""
+msgstr "(samo za čitanje) širina=%d, visina=%d\n"
 
 #: gschem/src/iface/i_sessions.c:263
 msgid "Could not open the session file"
-msgstr ""
+msgstr "Nije moguće otvoriti datoteku sesije"
 
+# is not accessible
 #: gschem/src/iface/i_sessions.c:269 gschem/src/x/x_window.c:1025
 msgid "is not accessible"
-msgstr ""
+msgstr "nije dostupan"
 
 #: gschem/src/iface/i_sessions.c:273
 msgid "File"
@@ -967,7 +968,7 @@ msgstr "Datoteka"
 
 #: gschem/src/iface/i_sessions.c:336
 msgid "Warning relative file names detected in session"
-msgstr ""
+msgstr "Upozorenje relativna imena datoteka otkrivena u sesiji"
 
 #: gschem/src/iface/i_sessions.c:347 gschem/src/iface/i_sessions.c:360
 #: gschem/src/iface/i_sessions.c:967 gschem/src/x/x_sessions.c:242
