gschem: update Catalan translations

--- a/gschem/po/ca.po
+++ b/gschem/po/ca.po
@@ -978,23 +978,25 @@ msgstr "La visualització automàtica és ara"
 #: gschem/src/iface/i_command.c:5064
 #, c-format
 msgid "(read only) width=%d, height=%d\n"
-msgstr ""
+msgstr "(només de lectura) amplada=%d, alçada=%d\n"
 
 #: gschem/src/iface/i_sessions.c:263
 msgid "Could not open the session file"
-msgstr ""
+msgstr "No s'ha pogut obrir el fitxer de sessió"
 
+# is not accessible
 #: gschem/src/iface/i_sessions.c:269 gschem/src/x/x_window.c:1025
 msgid "is not accessible"
-msgstr ""
+msgstr "no és accessible"
 
+# File
 #: gschem/src/iface/i_sessions.c:273
 msgid "File"
-msgstr ""
+msgstr "Dossier"
 
 #: gschem/src/iface/i_sessions.c:336
 msgid "Warning relative file names detected in session"
-msgstr ""
+msgstr "Advertiment de noms de fitxers relatius detectats a la sessió"
 
 #: gschem/src/iface/i_sessions.c:347 gschem/src/iface/i_sessions.c:360
 #: gschem/src/iface/i_sessions.c:967 gschem/src/x/x_sessions.c:242
