gschem: update Greek translations

--- a/gschem/po/el.po
+++ b/gschem/po/el.po
@@ -212,6 +212,39 @@ msgid ""
 "Report bugs at <https://bugs.launchpad.net/geda>\n"
 "gEDA homepage: <http://www.geda-project.org>\n"
 msgstr ""
+"Χρήση: %s [ΕΠΙΛΟΓΗ ...] [--] [ΑΡΧΕΙΟ ...]\n"
+"\n"
+"Επεξεργαστείτε διαδραστικά σχήματα ή σύμβολα gEDA. Εάν έχουν καθοριστεί ένα\n"
+"ή περισσότερα αρχεία, ανοίξτε τα για επεξεργασία; Διαφορετικά, δημιουργήστε \n"
+" ένα νέο, κενό σχηματικό.\n"
+"\n"
+"Επιλογές:\n"
+"  -a, --render-adaptor <DRV> Καθορίστε ποιος προσαρμογέας απόδοσης θα "
+"χρησιμοποιήσετε, Cario ή X11.\n"
+"  -c, --config-file <ΑΡΧΕΙΟ> Πρόσθετο αρχείο διαμόρφωσης για φόρτωση.\n"
+"  -g, --guile <DIR>          Προσθήκη καταλόγου στη διαδρομή guile (προ-διαμόρφωση).\n"
+"  -f, --font <NAME>          ορισμός ονόματος οικογένειας γραμματοσειρών\n"
+"  -h, --help                 Βοήθεια; αυτό το μήνυμα.\n"
+"  -l, --list                 List saved session names.\n"
+"  -m, --safe-mode            Safe Mode.\n"
+"  -n, --no-auto              No auto load last document.\n"
+"  -o, --output <ΑΡΧΕΙΟ>      Output filename (for printing and image "
+"output).\n"
+"  -p, --place                Automatically place the window.\n"
+"  -q, --quiet                Quiet mode.\n"
+"  -r, --run <ΑΡΧΕΙΟ>         Scheme script to run at startup.\n"
+"  -s, --start <name>         Startup using the given session name.\n"
+"  -t, --title-block <ΑΡΧΕΙΟ> Start a new drawing using the specified title-"
+"block.\n"
+"  -u, --undo-dir <DIR>       Specify a temporary directory for Undo files.\n"
+"  -v, --verbose              Verbose mode.\n"
+"  -V, --version              Show version information.\n"
+"  -x (EXPR)                  Scheme expression to run at startup.\n"
+"  -z, --minimized            Hide the main window, used for scripting\n"
+"  --                         Treat all remaining arguments as filenames.\n"
+"\n"
+"Report bugs at <https://bugs.launchpad.net/geda>\n"
+"gEDA homepage: <http://www.geda-project.org>\n"
 
 #: gschem/src/base/gschem_parsecmd.c:131
 msgid ""
