gschem: update Chinese simplified translations

--- a/gschem/po/zh_CN.po
+++ b/gschem/po/zh_CN.po
@@ -237,29 +237,29 @@ msgstr ""
 "打开它们进行编辑；否则，请创建一个新的空原理图.\n"
 "\n"
 "选项:\n"
-"  -a, --render-adaptor <DRV> 指定要使用的渲染适配器，Cario或X11.\n"
-"  -c, --config-file <FILE>   要加载的其他配置文件.\n"
+"  -a, --render-adaptor <载具> 指定要使用的渲染适配器，Cario或X11.\n"
+"  -c, --config-file <文件>    要加载的其他配置文件.\n"
 "  -g, --guile <DIR>          将DIR添加到Guile路径（预配置）.\n"
-"  -f, --font <NAME>          设置字体系列名称\n"
+"  -f, --font <名称>           设置字体系列名称\n"
 "  -h, --help                 帮助;这条信息.\n"
 "  -l, --list                 列出保存的会话名称.\n"
 "  -m, --safe-mode            安全模式.\n"
 "  -n, --no-auto              没有自动加载上一个文档.\n"
-"  -o, --output <FILE>        输出文件名（用于打印和图像输出）.\n"
+"  -o, --output <文件>         输出文件名（用于打印和图像输出）.\n"
 "  -p, --place                自动放置窗户.\n"
-"  -q, --quiet                Quiet mode.\n"
-"  -r, --run <FILE>           Scheme script to run at startup.\n"
-"  -s, --start <name>         Startup using the given session name.\n"
-"  -t, --title-block <FILE>   Start a new drawing using the specified title-block.\n"
-"  -u, --undo-dir <DIR>       Specify a temporary directory for Undo files.\n"
-"  -v, --verbose              Verbose mode.\n"
-"  -V, --version              Show version information.\n"
-"  -x (EXPR)                  Scheme expression to run at startup.\n"
-"  -z, --minimized            Hide the main window, used for scripting\n"
-"  --                         Treat all remaining arguments as filenames.\n"
+"  -q, --quiet                静音模式.\n"
+"  -r, --run <文件>            方案脚本在启动时运行.\n"
+"  -s, --start <名称>          使用给定的会话名称启动.\n"
+"  -t, --title-block <文件>    使用指定的标题栏开始新图形.\n"
+"  -u, --undo-dir <DIR>       为撤消文件指定一个临时目录.\n"
+"  -v, --verbose              详细模式.\n"
+"  -V, --version              显示版本信息.\n"
+"  -x (EXPR)                  方案表达式在启动时运行.\n"
+"  -z, --minimized            隐藏主窗口，用于编写脚本\n"
+"  --                         将所有其余参数视为文件名.\n"
 "\n"
-"Report bugs at <https://bugs.launchpad.net/geda>\n"
-"gEDA homepage: <http://www.geda-project.org>\n"
+"在以下位置報告錯誤 <https://bugs.launchpad.net/geda>\n"
+"gEDA 主页: <http://www.geda-project.org>\n"
 
 #: gschem/src/base/gschem_parsecmd.c:131
 msgid ""
