gschem: update Hungarian translations

--- a/gschem/po/hu.po
+++ b/gschem/po/hu.po
@@ -203,6 +203,39 @@ msgid ""
 "Report bugs at <https://bugs.launchpad.net/geda>\n"
 "gEDA homepage: <http://www.geda-project.org>\n"
 msgstr ""
+"Opciók: %s [VÁLASZTÁSI LEHETŐSÉG ...] [--] [FÁJL ...]\n"
+"\n"
+"Interaktívan szerkessze a gEDA vázlatait vagy szimbólumait. Ha egy vagy több \n"
+"FÁJL van megadva, nyissa meg őket szerkesztésre; különben hozzon létre egy új, \n"
+" üres vázlatos.\n"
+"\n"
+"Opciók:\n"
+"  -a, --render-adaptor <DRV> Adja meg, hogy melyik render adaptert használja, "
+"Cario vagy X11.\n"
+"  -c, --config-file <FÁJL>   További betöltendő konfigurációs fájl.\n"
+"  -g, --guile <DIR>          Adja hozzá a DIR-t a Guile útvonalhoz (pre-config).\n"
+"  -f, --font <NAME>          állítsa be a betűtípus családnevét\n"
+"  -h, --help                 Segítség; ez az üzenet.\n"
+"  -l, --list                 List saved session names.\n"
+"  -m, --safe-mode            Safe Mode.\n"
+"  -n, --no-auto              No auto load last document.\n"
+"  -o, --output <FÁJL>        Output filename (for printing and image "
+"output).\n"
+"  -p, --place                Automatically place the window.\n"
+"  -q, --quiet                Quiet mode.\n"
+"  -r, --run <FÁJL>           Scheme script to run at startup.\n"
+"  -s, --start <name>         Startup using the given session name.\n"
+"  -t, --title-block <FÁJL>   Start a new drawing using the specified title-"
+"block.\n"
+"  -u, --undo-dir <DIR>       Specify a temporary directory for Undo files.\n"
+"  -v, --verbose              Verbose mode.\n"
+"  -V, --version              Show version information.\n"
+"  -x (EXPR)                  Scheme expression to run at startup.\n"
+"  -z, --minimized            Hide the main window, used for scripting\n"
+"  --                         Treat all remaining arguments as filenames.\n"
+"\n"
+"Report bugs at <https://bugs.launchpad.net/geda>\n"
+"gEDA homepage: <http://www.geda-project.org>\n"
 
 #: gschem/src/base/gschem_parsecmd.c:131
 msgid ""
