gschem: update Hungarian translations

--- a/gschem/po/hu.po
+++ b/gschem/po/hu.po
@@ -216,15 +216,14 @@ msgstr ""
 "  -g, --guile <DIR>          Adja hozzá a DIR-t a Guile útvonalhoz (pre-config).\n"
 "  -f, --font <NAME>          állítsa be a betűtípus családnevét\n"
 "  -h, --help                 Segítség; ez az üzenet.\n"
-"  -l, --list                 List saved session names.\n"
-"  -m, --safe-mode            Safe Mode.\n"
-"  -n, --no-auto              No auto load last document.\n"
-"  -o, --output <FÁJL>        Output filename (for printing and image "
-"output).\n"
-"  -p, --place                Automatically place the window.\n"
-"  -q, --quiet                Quiet mode.\n"
-"  -r, --run <FÁJL>           Scheme script to run at startup.\n"
-"  -s, --start <name>         Startup using the given session name.\n"
+"  -l, --list                 Sorolja fel a mentett munkamenetek nevét.\n"
+"  -m, --safe-mode            Biztonságos mód.\n"
+"  -n, --no-auto              Nincs automatikus betöltés az utolsó dokumentumba.\n"
+"  -o, --output <FÁJL>        Kimeneti fájlnév (nyomtatáshoz és képkimenethez).\n"
+"  -p, --place                Az ablak automatikus elhelyezése.\n"
+"  -q, --quiet                Csendes mód.\n"
+"  -r, --run <FÁJL>           Az indításkor futtatható séma szkript.\n"
+"  -s, --start <name>         Indítás a megadott munkamenet nevével.\n"
 "  -t, --title-block <FÁJL>   Start a new drawing using the specified title-"
 "block.\n"
 "  -u, --undo-dir <DIR>       Specify a temporary directory for Undo files.\n"
