gschem: update Swedish translations

--- a/gschem/po/sv.po
+++ b/gschem/po/sv.po
@@ -959,20 +959,21 @@ msgstr "Åtgärder återkopplingsläge inställt på GRÄNS"
 
 #: gschem/src/iface/i_command.c:4814
 msgid "Action feedback mode set to BOUNDINGBOX"
-msgstr ""
+msgstr "Återkopplingsläge inställt på avgränsningsruta"
 
 #: gschem/src/iface/i_command.c:4842
 msgid "Auto-Pan is now"
-msgstr ""
+msgstr "Automatisk panorering är nu"
 
 #: gschem/src/iface/i_command.c:5064
 #, c-format
 msgid "(read only) width=%d, height=%d\n"
-msgstr ""
+msgstr "(skrivskyddad) bredd=%d, höjd=%d\n"
 
+# Could not open the session file
 #: gschem/src/iface/i_sessions.c:263
 msgid "Could not open the session file"
-msgstr ""
+msgstr "Det gick inte att öppna sessionsfilen"
 
 #: gschem/src/iface/i_sessions.c:269 gschem/src/x/x_window.c:1025
 msgid "is not accessible"
