--- a/gschem/po/tr.po
+++ b/gschem/po/tr.po
@@ -933,20 +933,21 @@ msgstr "Eylem geri bildirim modu OUTLINE olarak ayarlandı"
 
 #: gschem/src/iface/i_command.c:4814
 msgid "Action feedback mode set to BOUNDINGBOX"
-msgstr ""
+msgstr "Eylem geri bildirim modu sınırlayıcı kutuya ayarlandı"
 
 #: gschem/src/iface/i_command.c:4842
 msgid "Auto-Pan is now"
-msgstr ""
+msgstr "Otomatik Pan artık"
 
 #: gschem/src/iface/i_command.c:5064
 #, c-format
 msgid "(read only) width=%d, height=%d\n"
-msgstr ""
+msgstr "(skrivskyddad) bredd=%d, höjd=%d\n"
 
+# Could not open the session file
 #: gschem/src/iface/i_sessions.c:263
 msgid "Could not open the session file"
-msgstr ""
+msgstr "Oturum dosyası açılamadı"
 
 #: gschem/src/iface/i_sessions.c:269 gschem/src/x/x_window.c:1025
 msgid "is not accessible"
