--- a/gschem/po/fi.po
+++ b/gschem/po/fi.po
@@ -958,9 +958,10 @@ msgstr "(vain luku) leveys=%d, korkeus=%d\n"
 msgid "Could not open the session file"
 msgstr "Istuntotiedostoa ei voitu avata"
 
+# is not accessible
 #: gschem/src/iface/i_sessions.c:269 gschem/src/x/x_window.c:1025
 msgid "is not accessible"
-msgstr ""
+msgstr "ei ole saatavilla"
 
 #: gschem/src/iface/i_sessions.c:273
 msgid "File"
@@ -968,7 +969,7 @@ msgstr "_Tiedosto"
 
 #: gschem/src/iface/i_sessions.c:336
 msgid "Warning relative file names detected in session"
-msgstr ""
+msgstr "Varoitus suhteellisista tiedostonimistä havaittu istunnossa"
 
 #: gschem/src/iface/i_sessions.c:347 gschem/src/iface/i_sessions.c:360
 #: gschem/src/iface/i_sessions.c:967 gschem/src/x/x_sessions.c:242
