gschem: update Hungarian translations

--- a/gschem/po/hu.po
+++ b/gschem/po/hu.po
@@ -224,17 +224,18 @@ msgstr ""
 "  -q, --quiet                Csendes mód.\n"
 "  -r, --run <FÁJL>           Az indításkor futtatható séma szkript.\n"
 "  -s, --start <name>         Indítás a megadott munkamenet nevével.\n"
-"  -t, --title-block <FÁJL>   Start a new drawing using the specified title-"
-"block.\n"
-"  -u, --undo-dir <DIR>       Specify a temporary directory for Undo files.\n"
-"  -v, --verbose              Verbose mode.\n"
-"  -V, --version              Show version information.\n"
-"  -x (EXPR)                  Scheme expression to run at startup.\n"
-"  -z, --minimized            Hide the main window, used for scripting\n"
-"  --                         Treat all remaining arguments as filenames.\n"
+"  -t, --title-block <FÁJL>   Indítson új rajzot a megadott címblokk "
+"használatával.\n"
+"  -u, --undo-dir <DIR>       Adjon meg egy ideiglenes könyvtárat a "
+"Visszavonás fájlokhoz.\n"
+"  -v, --verbose              Bőbeszédű mód.\n"
+"  -V, --version              A verzióinformációk megjelenítése.\n"
+"  -x (EXPR)                  Az indításkor futtatható séma kifejezés.\n"
+"  -z, --minimized            A parancsfájlokhoz használt főablak elrejtése\n"
+"  --                         Az összes fennmaradó argumentumot fájlnévként kezelje.\n"
 "\n"
-"Report bugs at <https://bugs.launchpad.net/geda>\n"
-"gEDA homepage: <http://www.geda-project.org>\n"
+"Hibák jelentése: <https://bugs.launchpad.net/geda>\n"
+"gEDA honlap: <http://www.geda-project.org>\n"
 
 #: gschem/src/base/gschem_parsecmd.c:131
 msgid ""
