--- a/gschem/po/sl.po
+++ b/gschem/po/sl.po
@@ -922,20 +922,21 @@ msgstr "Način povratnih informacij o dejanju je nastavljen na omejevalno polje"
 
 #: gschem/src/iface/i_command.c:4842
 msgid "Auto-Pan is now"
-msgstr ""
+msgstr "Zdaj je samodejno pomikanje"
 
 #: gschem/src/iface/i_command.c:5064
 #, c-format
 msgid "(read only) width=%d, height=%d\n"
-msgstr ""
+msgstr "(samo za branje) širina=%d, višina=%d\n"
 
 #: gschem/src/iface/i_sessions.c:263
 msgid "Could not open the session file"
-msgstr ""
+msgstr "Datoteke seje ni bilo mogoče odpreti"
 
+# is not accessible
 #: gschem/src/iface/i_sessions.c:269 gschem/src/x/x_window.c:1025
 msgid "is not accessible"
-msgstr ""
+msgstr "ni dostopen"
 
 #: gschem/src/iface/i_sessions.c:273
 msgid "File"
@@ -943,7 +944,7 @@ msgstr "Datoteka"
 
 #: gschem/src/iface/i_sessions.c:336
 msgid "Warning relative file names detected in session"
-msgstr ""
+msgstr "Opozorilo relativnih imen datotek, zaznanih v seji"
 
 #: gschem/src/iface/i_sessions.c:347 gschem/src/iface/i_sessions.c:360
 #: gschem/src/iface/i_sessions.c:967 gschem/src/x/x_sessions.c:242
