--- a/gschem/po/sv.po
+++ b/gschem/po/sv.po
@@ -975,17 +975,19 @@ msgstr "(skrivskyddad) bredd=%d, höjd=%d\n"
 msgid "Could not open the session file"
 msgstr "Det gick inte att öppna sessionsfilen"
 
+# is not accessible
 #: gschem/src/iface/i_sessions.c:269 gschem/src/x/x_window.c:1025
 msgid "is not accessible"
-msgstr ""
+msgstr "är inte tillgänglig"
 
+# File
 #: gschem/src/iface/i_sessions.c:273
 msgid "File"
-msgstr ""
+msgstr "datorfil"
 
 #: gschem/src/iface/i_sessions.c:336
 msgid "Warning relative file names detected in session"
-msgstr ""
+msgstr "Varning relativa filnamn upptäcktes under sessionen"
 
 #: gschem/src/iface/i_sessions.c:347 gschem/src/iface/i_sessions.c:360
 #: gschem/src/iface/i_sessions.c:967 gschem/src/x/x_sessions.c:242
